--- a/templates/application/application.permission.remove.twig
+++ b/templates/application/application.permission.remove.twig
@@ -65,7 +65,7 @@
             <li>{{ application.name }}</li>
 
             <li>Identifier</li>
-            <li>{{ application.key }}</li>
+            <li>{{ application.identifier }}</li>
 
             <li>GitHub Source</li>
             <li>{{ git_macros.gitsource(application) }}</li>
