Remove need for separate admin permission handler - clean up validator

--- a/templates/permissions/permissions.twig
+++ b/templates/permissions/permissions.twig
@@ -30,14 +30,14 @@
         <li><a href="#super">Hal Administrators</a></li>
     </ul>
 
-    <h2 id="app-owners">Application Owners</h2>
+    <h2 id="app-owners">Owners</h2>
     {% if owners %}
         <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th class="t20">Username</th>
                     <th>Email</th>
-                    <th>Applications</th>
+                    <th>Scope</th>
                 </tr>
             </thead>
             <tbody>
@@ -73,14 +73,14 @@
         <p>There are no application owners.</p>
     {% endif %}
 
-    <h2 id="app-members">Application Members</h2>
+    <h2 id="app-members">Members</h2>
     {% if members %}
         <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th class="t20">Username</th>
                     <th>Email</th>
-                    <th>Applications</th>
+                    <th>Scope</th>
                 </tr>
             </thead>
             <tbody>
