--- a/templates/user/partial.user-status.twig
+++ b/templates/user/partial.user-status.twig
@@ -19,37 +19,32 @@
 
         <li>
             <h6>Authorization Tiers</h6>
-            <ul class="list--bullet">
-                {% set has_permissions = false %}
-                {% if permissions.member %}
-                    {% set has_permissions = true %}
-                    <li>{{ macros.status('Member', 'info') }}</li>
-                {% endif %}
 
-                {% if permissions.owner %}
-                    {% set has_permissions = true %}
-                    <li>{{ macros.status('Owner', 'notice') }}</li>
-                {% endif %}
+            {% set tiers = authorizations.getTiers %}
 
-                {% if permissions.admin %}
-                    {% set has_permissions = true %}
-                    <li>{{ macros.status('Admin', 'warning') }}</li>
-                {% endif %}
-
-                {% if permissions.super %}
-                    {% set has_permissions = true %}
-                    <li>{{ macros.status('Super', 'error') }}</li>
-                {% endif %}
-
-                {% if not has_permissions %}
-                    <li>None</li>
-                {% endif %}
-            </ul>
+            {% if tiers %}
+                <ul class="list--bullet">
+                    {% if authorizations.isMember %}
+                        <li>{{ macros.status('Member', 'info') }}</li>
+                    {% endif %}
+                    {% if authorizations.isOwner %}
+                        <li>{{ macros.status('Owner', 'notice') }}</li>
+                    {% endif %}
+                    {% if authorizations.isAdmin %}
+                        <li>{{ macros.status('Admin', 'warning') }}</li>
+                    {% endif %}
+                    {% if authorizations.isSuper %}
+                        <li>{{ macros.status('Super', 'error') }}</li>
+                    {% endif %}
+                </ul>
+            {% else %}
+                None
+            {% endif %}
         </li>
 
         <li>
             <h6>Member</h6>
-            {% if permissions.member %}
+            {% if permissions.isMember %}
                 <ul class="list--bullet">
                     {% for permission in permissions.member %}
                         <li>
@@ -70,7 +65,7 @@
 
         <li>
             <h6>Owner</h6>
-            {% if permissions.owner %}
+            {% if permissions.isOwner %}
                 <ul class="list--bullet">
                     {% for permission in permissions.owner %}
                         <li>
