--- a/templates/release/release.twig
+++ b/templates/release/release.twig
@@ -68,7 +68,7 @@
             </li>
 
             <li>Environment</li>
-            <li>{{ release.build.environment ? release.build.environment.name : 'Global' }}</li>
+            <li>{{ release.build.environment ? release.build.environment.name : 'Any' }}</li>
 
             <li>Reference</li>
             <li>
