--- a/templates/group/group.twig
+++ b/templates/group/group.twig
@@ -37,8 +37,10 @@
 
                     {% elseif group.type() == 's3' %}
 
+                        <th>Method</th>
                         <th>Bucket</th>
-                        <th>Path</th>
+                        <th>Source</th>
+                        <th>Target</th>
 
                     {% elseif group.type() == 'cd' %}
 
@@ -72,8 +74,10 @@
 
                     {% elseif group.type == 's3' %}
 
+                        <td><code>{{ target.parameter('s3_method') }}</code></td>
                         <td><code>{{ target.parameter('bucket', target) }}</code></td>
-                        <td><code>{{ target.parameter('path') ?: '$APPID/$PUSHID.zip' }}</code></td>
+                        <td><code>{{ target.parameter('source') ?: '$APPID/$PUSHID.zip' }}</code></td>
+                        <td><code>{{ target.parameter('target') ?: '.' }}</code></td>
 
                     {% elseif group.type == 'cd' %}
 
