--- a/templates/release/release.twig
+++ b/templates/release/release.twig
@@ -111,7 +111,7 @@
         </ul>
     </div>
 
-    <h2>release Events</h2>
+    <h2>Release Events</h2>
     {% include 'build/partial.event-table.twig' with {logs: logs, canLoad: release.isFinished } only %}
 
 {% endblock %}
