--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -38,7 +38,7 @@
 
             <tr>
                 <td>
-                    <a href="{{ uriFor('application', {application: target.application.id}) }}">{{ target.application.name }}</a>
+                    <a href="{{ uriFor('application', {'application': target.application.id}) }}">{{ target.application.name }}</a>
                 </td>
                 <td>
                     {{ target.group.environment.name }}
