--- a/templates/queue.history.twig
+++ b/templates/queue.history.twig
@@ -10,6 +10,8 @@
 {% set paginationblock = pagination.time_pagination(selected_date, 'queue.history') %}
 
 {% block content %}
+    {{ block('jobhistorylinks') }}
+
     <h1>Build and Release History</h1>
 
     {{ paginationblock }}
@@ -18,4 +20,11 @@
 
     {{ paginationblock }}
 
+{% endblock %}
+
+{% block jobhistorylinks %}
+    <p>
+        <a class="btn btn--small" href="{{ uriFor('builds.list.page1') }}">All builds</a>
+        <a class="btn btn--small" href="{{ uriFor('releases.list.page1') }}">All pushes</a>
+    </p>
 {% endblock %}
