--- a/templates/queue.twig
+++ b/templates/queue.twig
@@ -4,10 +4,19 @@
 {% set page_title = "Queue" %}
 
 {% block content %}
+    {{ block('jobhistorylinks') }}
+
     <h1>Build and Release Queue</h1>
 
     {% include '_partial-job/pending-table.twig' with {'pending': pending} only %}
 
     <p><a class="btn" href="{{ uriFor('queue.history.page1') }}">Queue History</a></p>
 
+{% endblock %}
+
+{% block jobhistorylinks %}
+    <p>
+        <a class="btn btn--small" href="{{ uriFor('builds.list.page1') }}">All builds</a>
+        <a class="btn btn--small" href="{{ uriFor('releases.list.page1') }}">All pushes</a>
+    </p>
 {% endblock %}
